force-app/main/default/objects/Vacation__c/Vacation__c.object-meta.xml
<CustomObject>
    
    <label>Férias</label>
    <nameField>
        <displayFormat>FERIAS-{0000}</displayFormat>
        <label>Nome de Férias</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Férias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>