force-app/main/default/objects/Vacation__c/fields/DelegateApproverUser__c.field-meta.xml
<CustomField>
    <fullName>DelegateApproverUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Informa o usuário que será aprovador delegado.</inlineHelpText>
    <label>Usuario Aprovador Delegado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FeriasAprovadorDelegado</relationshipName>
    <type>Lookup</type>
</CustomField>