force-app/main/default/objects/Vacation__c/fields/VacationEndDate__c.field-meta.xml
<CustomField>
    <fullName>VacationEndDate__c</fullName>
    <description>Informa data de término das férias.</description>
    <inlineHelpText>Informa data de término das férias.</inlineHelpText>
    <label>Data de término das férias</label>
    <required>true</required>
    <type>Date</type>
</CustomField>