force-app/main/default/objects/Vacation__c/fields/VacationStartDate__c.field-meta.xml
<CustomField>
    <fullName>VacationStartDate__c</fullName>
    <description>Informa a data de início das férias.</description>
    <inlineHelpText>Informa a data de início das férias.</inlineHelpText>
    <label>Data de início das férias</label>
    <required>true</required>
    <type>Date</type>
</CustomField>