force-app/main/default/objects/Vacation__c/fields/VacationUser__c.field-meta.xml
<CustomField>
    <fullName>VacationUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Informa o usuário que entrará em férias.</inlineHelpText>
    <label>Férias do Usuário</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsuarioFerias</relationshipName>
    <type>Lookup</type>
</CustomField>