force-app/main/default/objects/Vacation__c/validationRules/UsuarioFeriasObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>UsuarioFeriasObrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK( VacationUser__c), 
ISBLANK(  DelegateApproverUser__c ) 
)</errorConditionFormula>
    <errorMessage>O usuário que irá tirar férias e o usuário que será aprovador delegado devem estar preenchidos.</errorMessage>
</ValidationRule>