force-app/main/default/objects/Vacation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VacationStartDate__c</columns>
    <columns>VacationEndDate__c</columns>
    <columns>VacationUser__c</columns>
    <columns>DelegateApproverUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>